feat(common): converted to npm package

--- a/common/package.json
+++ b/common/package.json
@@ -1,10 +1,23 @@
 {
   "name": "common",
   "version": "1.0.0",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "tsc"
+  },
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "github.com/srijanmukherjee/secure-sms-dashboard"
   },
   "author": "Srijan Mukherjee <emailofsrijan@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^22.5.5",
+    "typescript": "^5.6.2"
+  }
 }
