--- a/agent/package.json
+++ b/agent/package.json
@@ -10,8 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "common": "file:../common",
     "react": "18.3.1",
-    "react-native": "0.75.3"
+    "react-native": "0.75.3",
+    "react-native-config": "^1.5.3",
+    "react-native-device-info": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
