--- a/agent/package.json
+++ b/agent/package.json
@@ -10,11 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.18",
     "common": "file:../common",
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-config": "^1.5.3",
-    "react-native-device-info": "^13.0.0"
+    "react-native-device-info": "^13.0.0",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
