--- a/agent/package.json
+++ b/agent/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@shopify/react-native-skia": "^1.3.13",
@@ -22,6 +23,7 @@
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.7.1",
     "react-native-vision-camera": "^4.5.3",
+    "ua-parser-js": "^1.0.39",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -34,6 +36,7 @@
     "@react-native/typescript-config": "0.75.3",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/ua-parser-js": "^0.7.39",
     "@types/uuid": "^10.0.0",
     "babel-jest": "^29.6.3",
     "babel-plugin-module-resolver": "^5.0.2",
