--- a/agent/android/app/build.gradle
+++ b/agent/android/app/build.gradle
@@ -58,7 +58,7 @@ react {
 /**
  * Set this to true to Run Proguard on Release builds to minify the Java bytecode.
  */
-def enableProguardInReleaseBuilds = false
+def enableProguardInReleaseBuilds = true
 
 /**
  * The preferred build flavor of JavaScriptCore (JSC)
@@ -93,6 +93,15 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+
+        release {
+            if (project.hasProperty('AGENT_APP_STORE_FILE')) {
+                storeFile file(AGENT_APP_STORE_FILE)
+                storePassword AGENT_APP_STORE_PASSWORD
+                keyAlias AGENT_APP_KEY_ALIAS
+                keyPassword AGENT_APP_KEY_PASSWORD
+            }
+        }
     }
     buildTypes {
         debug {
@@ -101,7 +110,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
