--- a/agent/package.json
+++ b/agent/package.json
@@ -10,13 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@shopify/react-native-skia": "^1.3.13",
     "common": "file:../common",
+    "lottie-react-native": "^7.0.0",
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-background-actions": "^4.0.1",
     "react-native-config": "^1.5.3",
     "react-native-device-info": "^13.0.0",
     "react-native-safe-area-context": "^4.11.0",
