--- a/agent/package.json
+++ b/agent/package.json
@@ -22,6 +22,7 @@
     "react-native-device-info": "^13.0.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^15.7.1",
     "react-native-vision-camera": "^4.5.3",
     "ua-parser-js": "^1.0.39",
@@ -36,6 +37,7 @@
     "@react-native/metro-config": "0.75.3",
     "@react-native/typescript-config": "0.75.3",
     "@types/react": "^18.2.6",
+    "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-test-renderer": "^18.0.0",
     "@types/ua-parser-js": "^0.7.39",
     "@types/uuid": "^10.0.0",
